# libusbhsfs

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE_ISC.md  Makefile  README.md  rw_test.c  tests.c
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
example/: CMakeLists.txt  Makefile
example/source/: main.c
example_callback/: CMakeLists.txt  Makefile
example_callback/source/: main.c
example_event/: CMakeLists.txt  Makefile
example_event/source/: main.c
include/: usbhsfs.h
liblwext4/: Makefile  PKGBUILD  lwext4-733b2c40d7121900e339bee8784977467a9fe8c9.patch  switch-lwext4-58bcf89a121b72d4fb66334f1693d3b30e4cb9c5.patch  switch-lwext4-733b2c40d7121900e339bee8784977467a9fe8c9.patch
libntfs-3g/: Makefile  PKGBUILD  ntfs-3g_ntfsprogs-2017.3.23.patch  switch-libntfs-3g-2021.8.22.patch  switch-libntfs-3g-2022.5.17.patch
libtest/: Makefile
libtest/source/: Main.cpp  main.c
lwext4/: lwext4-733b2c40d7121900e339bee8784977467a9fe8c9-makefile.patch
source/: CMakeLists.txt  devoptab_macros.h  usb_common.h  usbhs_ext.c  usbhs_ext.h  usbhsfs.c  usbhsfs_drive.c  usbhsfs_drive.h  usbhsfs_drive_datatypes.h  usbhsfs_log.c  usbhsfs_log.h  usbhsfs_manager.c  usbhsfs_manager.h  usbhsfs_mount.c  usbhsfs_mount.h  usbhsfs_request.c  usbhsfs_request.h  usbhsfs_scsi.c  usbhsfs_scsi.h  usbhsfs_utils.c  usbhsfs_utils.h
source/fat/: diskio.c  fat_dev.c  fat_dev.h  fat_mount.c  fat_mount.h  ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c
source/fatfs/: diskio.c  diskio.h  ff.c  ff.h  ff_dev.c  ff_dev.h  ff_disk_io.c  ffconf.h  ffsystem.c  ffunicode.c
source/lwext4/: ext.c  ext.h  ext_dev.c  ext_dev.h  ext_disk_io.c  ext_disk_io.h
source/ntfs/: ntfs.c  ntfs.h  ntfs_dev.h  ntfs_disk_io.c  ntfs_disk_io.h
source/ntfs-3g/: ntfs.c  ntfs.h  ntfs_dev.c  ntfs_dev.h  ntfs_disk_io.c  ntfs_disk_io.h  ntfs_malloc.h  ntfs_more.c  ntfs_more.h
source/ntfs/ntfs-3g/: attrib.c  attrlist.c  bitmap.c  bootsect.c  cache.c  collate.c  compat.c  compat.h  compress.c  config.h  debug.c  debug.h  device.c  device.h  device_io.h  dir.c  ea.c  efs.c  endians.h  index.c  inode.c  ioctl.c  lcnalloc.c  logfile.c  logging.c  logging.h  mft.c  misc.c  mst.c  ntfstime.h  object_id.c  realpath.c  realpath.h  reparse.c  runlist.c  security.c  support.h  types.h  unistr.c  volume.c  (+2 more)
source/sxos/: service_guard.h  usbfs.c  usbfs.h  usbfs_dev.c  usbfs_dev.h
